# expense-tracker-backend

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.sample.yml  docker-compose.yaml  docker-compose.yml  keycloak-realm.json  localAccessToken.sh  migrations.json  nx.json  openapi.json  package-lock.json  package.json  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  cicd.yml
apps/expense-tracker-frontend/: .env.compose  .env.local.example  Dockerfile  entrypoint.sh  jest.config.ts  next.config.js  next.config.mjs  project.json  tailwind.config.js  tsconfig.json
apps/expense-tracker-frontend-e2e/: playwright.config.ts  project.json
apps/expense-tracker-frontend/src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/expense-tracker-frontend/src/components/: app-layout.tsx  card.tsx  collapse.tsx  new-pot-modal.tsx  new-template-modal.tsx  pot.tsx  pots-overview.tsx  template.tsx  user-display.tsx
apps/expense-tracker-frontend/src/components/expenses/: expenses-table.tsx  new-expense-modal.tsx
apps/expense-tracker-frontend/src/libs/: useCronExpression.ts
apps/expense-tracker-frontend/src/pages/: _app.tsx
apps/expense-tracker-frontend/src/pages/api/auth/: [...nextauth].ts
apps/expense-tracker-frontend/src/pages/pots/: [id].tsx
apps/expense-tracker-frontend/src/pages/templates/: [id].tsx
apps/expense-tracker-frontend/types/: next-auth.d.ts
apps/expense_tracker/: Cargo.toml  Dockerfile  openapi.json  project.json
apps/expense_tracker/src/: main.rs  settings.rs
config/: settings.toml  settings.toml.example  settings_compose.toml
expense-tracker/: .gitignore  Cargo.toml  diesel.toml  docker-compose.yaml
expense-tracker/expense-tracker/: Cargo.toml
expense-tracker/expense-tracker-api/: Cargo.toml
expense-tracker/expense-tracker-api/src/: currency_api.rs  expense_api.rs  health.rs  health_api.rs  lib.rs  pot_api.rs  user_api.rs
expense-tracker/expense-tracker-db/: Cargo.toml
expense-tracker/expense-tracker-db/migrations/2024-12-17-153220_create_users/: down.sql  up.sql
expense-tracker/expense-tracker-db/migrations/2025-05-25-110525_pot_deletion/: up.sql
expense-tracker/expense-tracker-db/src/: currencies.rs  currency.rs  expenses.rs  lib.rs  pots.rs  schema.rs  splits.rs  users.rs
expense-tracker/expense-tracker-services/: Cargo.toml
expense-tracker/expense-tracker-services/src/: currency_service.rs  expense_service.rs  health_service.rs  lib.rs  pot_service.rs  user_service.rs
expense-tracker/expense-tracker/src/: main.rs  settings.rs
expense-tracker/migrations/2024-12-17-153220_create_users/: up.sql
libs/expense-tracker-client/: README.md  index.ts  orval.config.js  package.json  project.json
libs/expense-tracker-client/src/: auth.context.tsx  custom-client.ts  expense-tracker-client.ts
libs/expense-tracker-client/src/endpoints/: index.ts
libs/expense-tracker-client/src/endpoints/currency/: currency.ts
libs/expense-tracker-client/src/endpoints/expenses/: expenses.ts
libs/expense-tracker-client/src/endpoints/health/: health.ts
libs/expense-tracker-client/src/endpoints/pots/: pots.ts
libs/expense-tracker-client/src/endpoints/templates/: templates.ts
libs/expense-tracker-client/src/endpoints/users/: users.ts
libs/expense-tracker-client/src/model/: addUserToPotDTO.ts  currencyDTO.ts  expenseDTO.ts  index.ts  newCurrencyDTO.ts  newExpenseDTO.ts  newPotDTO.ts  newPotTemplateDTO.ts  newSplitDTO.ts  payExpenseDTO.ts  potDTO.ts  potDTOArchivedAt.ts  potTemplateDTO.ts  potTemplateUpdateDTO.ts  potTemplateUpdateDTOCronExpression.ts  potTemplateUpdateDTODefaultCurrencyId.ts  potTemplateUpdateDTOName.ts  removeUserFromPotDTO.ts  splitDTO.ts  userDTO.ts  userListDTO.ts
libs/expense_tracker_api/: Cargo.toml  project.json
libs/expense_tracker_api/src/: currency_api.rs  expense_api.rs  generate_openapi.rs  health_api.rs  lib.rs  pot_api.rs  template_api.rs  user_api.rs
libs/expense_tracker_db/: Cargo.toml  README.md  project.json
libs/expense_tracker_db/migrations/2024-12-17-153220_create_users/: down.sql  up.sql
libs/expense_tracker_db/migrations/2025-05-25-110525_pot_deletion/: down.sql
libs/expense_tracker_db/migrations/2026-02-13-090633_pot_name_expense_description_max_length/: down.sql  up.sql
libs/expense_tracker_db/migrations/2026-02-13-113558_pots_timestamp_archive/: down.sql  up.sql
libs/expense_tracker_db/migrations/2026-02-13-114252_pot_template_tables/: down.sql  up.sql
libs/expense_tracker_db/migrations/2026-02-20-125055_pot_templates_adjustments/: down.sql  up.sql
libs/expense_tracker_db/migrations/2026-02-27-120901_pot_template_create_at_not_null/: down.sql  up.sql
libs/expense_tracker_db/migrations/2026-02-27-122108_pot_template_create_reocurring/: down.sql  up.sql
libs/expense_tracker_db/migrations/2026-03-20-113449-0000_using_cron_expression/: down.sql  up.sql
libs/expense_tracker_db/src/: currencies.rs  expenses.rs  lib.rs  pots.rs  schema.rs  splits.rs  template_pots.rs  user_repository.rs  users.rs
libs/expense_tracker_services/: Cargo.toml  project.json
libs/expense_tracker_services/src/: background_service.rs  cron_manager_service.rs  currency_service.rs  expense_service.rs  health_service.rs  lib.rs  pot_service.rs  template_service.rs  user_service.rs
nginx/: nginx.conf
openapi/: expense_tracker_openapi.json
