[package]
name = "expense_tracker"
version = "1.0.0"
edition = "2021"
description = "A REST Api that offers various endpoints for handling shared expenses."
license = "GPL-3.0-or-later"
authors = ["Ciel1996"]

[dependencies]
expense_tracker_api = { path = "../../libs/expense_tracker_api" }
expense_tracker_db = { path = "../../libs/expense_tracker_db" }
axum = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = "5.4.0"
utoipa-axum = "0.2"
tower = "0.5.3"
tower-http = {version = "0.6.8", features = ["trace", "cors"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
log = "0.4.29"
tracing-subscriber = { version = "0.3.22", features=["env-filter"] }
config = { version = "0.15.19", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.58", features = [ "derive" ] }
http = "1.4.0"
