[package]
name = "expense_tracker"
version = "1.3.1"
edition = "2024"
description = "A REST Api that offers various endpoints for handling shared expenses."
license = "GPL-3.0-or-later"
authors = ["Ciel1996"]

[dependencies]
expense_tracker_api = { path = "../../libs/expense_tracker_api" }
expense_tracker_db = { path = "../../libs/expense_tracker_db" }
axum = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = "5.5.0"
utoipa-axum = "0.2"
tower = "0.5.3"
tower-http = {version = "0.7.0", features = ["trace", "cors"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", features = ["json"] }
log = "0.4.33"
tracing-subscriber = { version = "0.3.23", features=["env-filter"] }
config = { version = "0.15.24", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = [ "derive" ] }
http = "1.4.2"
