[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
expense-tracker-db = { path = "../expense-tracker-db" }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
utoipa = "5.2.0"
utoipa-axum = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0.1", features = ["full"] }
diesel = "2.2.6"