[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
expense-tracker-db = { path = "../expense-tracker-db" }
expense-tracker-services = { path = "../expense-tracker-services" }
axum = "0.8.3"
utoipa = { version = "5.3.1", features = ["uuid"] }
utoipa-axum = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.6", features = ["full"] }
diesel = { version = "2.2.9", features = ["uuid"] }
uuid = ">=0.7.0,<2.0.0"
log = "0.4.27"