[package]
name = "expense-tracker-db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2", features = ["postgres"] }
bb8-diesel = "0.2.1"
diesel-async = { version = "0.5.2", features = ["postgres", "pool", "bb8", "async-connection-wrapper", "sync-connection-wrapper"] }
diesel_migrations = "2.2"
serde = { version = "1.0.216", features = ["derive"] }
tokio = "1.43.0"
