[package]
name = "expense-tracker"
version = "0.2.0"
edition = "2021"

[dependencies]
expense-tracker-api = { path = "../expense-tracker-api" }
expense-tracker-db = { path = "../expense-tracker-db" }
axum = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa = "5.3.1"
utoipa-axum = "0.2"
tower = "0.5.2"
tower-http = {version = "0.6.4", features = ["trace"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }