[package]
name = "expense_tracker_api"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Ciel1996"]

[dependencies]
expense_tracker_db = { path = "../expense_tracker_db" }
expense_tracker_services = { path = "../expense_tracker_services" }
axum = "0.8.8"
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
utoipa-axum = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
hyper = { version = "1.8.1", features = ["full"] }
uuid = ">=0.7.0,<2.0.0"
log = "0.4.29"
chrono = { version = "0.4.43", features = ["serde"] }
