[package]
name = "expense_tracker_db"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Ciel1996"]

[dependencies]
diesel = { version = "2.3.6", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.7.4", features = ["postgres", "pool", "bb8", "async-connection-wrapper", "sync-connection-wrapper"] }
diesel_migrations = "2.3.1"
diesel-enum = "0.2.1"
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = ">=0.7.0,<2.0.0", features = ["serde", "v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
