[package]
name = "expense_tracker_db"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Ciel1996"]

[dependencies]
diesel = { version = "2.3.10", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.9.2", features = ["postgres", "pool", "bb8", "async-connection-wrapper", "sync-connection-wrapper"] }
diesel_migrations = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.18"