
[package]
name = "expense_tracker_services"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Ciel1996"]

[dependencies]
expense_tracker_db = { path = "../expense_tracker_db" }
diesel = "2.3.6"
diesel-async = "0.7.4"
uuid = { version = ">=0.7.0,<2.0.0", features = ["serde", "v4", "v5", "v8"] }
log = "0.4.29"
cron_tab = { version = "0.2.13", features = ["sync", "async"] }
tokio = "1.49.0"